# ServerStats

./: .env  .gitignore  ConnectionManager.py  README.md  main.py  pyproject.toml  requirements.txt  stats.py  temps.py
src/server-stats/: __main__.py  stats.py
src/server_stats/: __init__.py  __main__.py  computer.py  connection_manager.py  constants.py  helpers.py
src/tests/: conftest.py  test_computer.py  test_connection_manager.py  test_helpers.py  test_main.py  test_stats.py
static/: app.css  scripts.js
templates/: index.html
tests/: test_connection_manager.py  test_main.py
utilities/: connection_manager.py
